add SpringBoot plugin

--- a/core_java/twitter/pom.xml
+++ b/core_java/twitter/pom.xml
@@ -56,4 +56,13 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <groupId>org.springframework.boot</groupId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
