--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -7,7 +7,7 @@
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
   <groupId>ca.jrvs.apps</groupId>
-  <artifactId>trading-app</artifactId>
+  <artifactId>trading</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
