--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -7,11 +7,11 @@
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
   <groupId>ca.jrvs.apps</groupId>
-  <artifactId>trading-app</artifactId>
+  <artifactId>trading</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <java.version>11</java.version>
+    <java.version>8</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
