--- a/springboot/Jenkinsfile
+++ b/springboot/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
     }
 
     environment {
-        app_name = 'trading-app'
+        app_name = 'trading-platform'
     }
 
     stages {
@@ -21,15 +21,16 @@ pipeline {
             when { branch 'develop' }
             steps {
                 echo "Current Branch is: ${env.GIT_BRANCH}"
-                sh "bash ./springboot/scripts/eb/eb_deploy.sh ${app_name} TradingApp-env-2"
+                sh "bash ./springboot/scripts/eb/eb_deploy.sh ${app_name} TradingPlatform-env"
             }
         }
         stage('Deploy_prod') {
             when { branch 'master' }
             steps {
                 echo "Current Branch is: ${env.GIT_BRANCH}"
-                sh "./springboot/scripts/eb/eb_deploy.sh ${app_name} TradingApp-env-prod"
+                sh "./springboot/scripts/eb/eb_deploy.sh ${app_name} TradingPlatform-env-prod"
             }
         }
     }
 }
+
